--- a/wa/basicaf.html
+++ b/wa/basicaf.html
@@ -23,8 +23,11 @@
 
     <section id="about">
         <h2>About Me</h2>
+        <h3>
+            Hello
+        </h3>
         <p>
-            Hello! I'm [Your Name], a passionate developer/designer/photographer (choose one). I've worked on various projects and I love what I do.
+            I'm Will Balliette, a passionate developer/designer/photographer (choose one). I've worked on various projects and I love what I do.
         </p>
     </section>
 
@@ -46,7 +49,7 @@
     <section id="contact">
         <h2>Contact Me</h2>
         <p>
-            Feel free to reach out to me at <a href="mailto:youremail@example.com">youremail@example.com</a>
+            Feel free to reach out to me at <a href="william.balliette@gmail.com">william.balliette@gmail.com</a>
         </p>
     </section>
 
