--- a/wa/basicaf.html
+++ b/wa/basicaf.html
@@ -54,7 +54,7 @@
     </section>
 
     <footer>
-        <p>© 2023 by [Your Name]. All Rights Reserved.
+        <p>© 2023 by Will Balliette. All Rights Reserved.
             All of this was written by ChatGPT for any graders. I am not attempting to pass this off as my own work. My work is in https://btx4.github.io/wa/wa1
         </p>
     </footer>
