Fixed a whole bunch of errors.

--- a/html-midterm/page1.html
+++ b/html-midterm/page1.html
@@ -25,8 +25,8 @@
 
 <div><a href="https://www.mcsweeneys.net/articles/edgar-allan-poe-watches-too-much-tiktok">Source page</a></div>
 <h1>JANUARY 19, 2023</h1>
-<h3>EDGAR ALLAN POE WATCHES TOO MUCH TikTok</h3>
-<h2>by JAMIE CRICKS</h2>
+<h2>EDGAR ALLAN POE WATCHES TOO MUCH TikTok</h2>
+<h3>by JAMIE CRICKS</h3>
  
 <p>Once upon a midday dreary, while I scrolled on, bummed and teary,
 Over many a short and spurious video of current cultural lore—
@@ -74,7 +74,7 @@ Just manifest for sure.<p>
 Asked me to get ready with her from her closet door,
 “Surely,” said I, “surely there is some vid that will show me a snack:
 A fit of hunger soon to attack, and this refrigerator to explore”—
-Then a Doritos covered in <em>crème fraiche<e> and caviar appeared;—
+Then a Doritos covered in <em>crème fraiche</em> and caviar appeared;—
 “But alas, I am too poor.”</p>
 
 <p>Though a casserole looked appealing trying my stomach’s empty feeling—
