Adding links to New Pages

--- a/wa/wa3.html
+++ b/wa/wa3.html
@@ -265,6 +265,16 @@
             <ul style = "list-style-type:disc;">
                 <li><a href = "https://jkaphammer.github.io/wa/wa3.html"> jkaphammer.github.io/wa/wa3.html</a></li>
                 <li><a href = "https://nazhonem.github.io/wa/wa3.html">nazhonem.github.io/wa/wa3.html</a> </li>
+                <li><a href = "https://reilley-locke.github.io/wa/wa3.html">reilley-locke.github.io/wa/wa3.html</a></li>
+                <li><a href = "https://rodrigorioss.github.io/wa/wa3.html">rodrigorioss.github.io/wa/wa3.html</a></li>
+                <li><a href = "https://ericscrivanich.github.io/wa/wa3.html">ericscrivanich.github.io/wa/wa3.html </a></li>
+                <li><a href = "https://avkn4998.github.io/wa/wa3.html">avkn4998.github.io/wa/wa3.html</a></li>
+                <li><a href = "https://annaprendergast7.github.io/wa/wa3.html">annaprendergast7.github.io/wa/wa3.html </a></li>
+                <li><a href = "https://autobement.github.io/wa/wa3.html">autobement.github.io/wa/wa3.html</a></li>
+                <li><a href = "https://suctuk.github.io/wa/wa3.html">suctuk.github.io/wa/wa3.html</a></li>
+                <li><a href = "https://emmenovak.github.io/wa/wa3.html">emmenovak.github.io/wa/wa3.html</a></li>
+                <li><a href = "https://clairegrossman.github.io/WA/wa3.html">clairegrossman.github.io/WA/wa3.html</a></li>
+
             </ul>
                 
 
