--- a/html-midterm/page4.html
+++ b/html-midterm/page4.html
@@ -1,4 +1,4 @@
-
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -34,22 +34,21 @@
             <th>Other?</th>
         </tr>
         <tr>
-            <td><img src="img/dogsFrolic.png"></td>
-            <td><img src="img/sunCat.png"></td>
-            <td><img src="img/diamondAlien.png"></td>
+            <td><img alt = "Dogs Frolicing" src="img/dogsFrolic.png"></td>
+            <td><img alt = "Sun Cat" src="img/sunCat.png"></td>
+            <td><img alt = "Diamond Alien" src="img/diamondAlien.png"></td>
         </tr>
         <tr>
-            <td><img src="img/dogSinging.png"></td>
-            <td><img src="img/boxingCats.png"></td>
-            <td><img src="img/creature.png"></td>
+            <td><img alt = "Dog Singing" src="img/dogSinging.png"></td>
+            <td><img alt = "Boxing Cats" src="img/boxingCats.png"></td>
+            <td><img alt = "Creature" src="img/creature.png"></td>
         </tr>
         <tr>
-            <td><img src="img/labLab.png"></td>
-            <td><img src="img/orangeCat.png"></td>
-            <td><img src="img/aliensPeace.png"></td>
+            <td><img alt = "Lab Lab" src="img/labLab.png"></td>
+            <td><img alt = "Orange Cat" src="img/orangeCat.png"></td>
+            <td><img alt = "Aliens Peace" src="img/aliensPeace.png"></td>
         </tr>
 
     </table>
 
 </body>
-</html>
