--- a/html-midterm/page5.html
+++ b/html-midterm/page5.html
@@ -1,58 +1,76 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Page 4</title>
+    <title>Page 5</title>
     <style>
-        img{
-            width:200px;
-            height:200px;
-        }
+      img {
+        width: 200px;
+        height: 200px;
+      }
     </style>
-</head>
-<body>
-
+  </head>
+  <body>
     <div class="navbar">
-        <a href="/html-midterm/page1.html">Page 1</a>
-        <span> | </span>
-        <a href="/html-midterm/page2.html">Page 2</a>
-        <span> | </span>
-        <a href="/html-midterm/page3.html">Page 3</a>
-        <span> | </span>
-        <a href="/html-midterm/page4.html">Page 4</a>
-        <span> | </span>
-        <a href="/html-midterm/page5.html">Page 5</a>
-        <span> | </span>
+      <a href="/html-midterm/page1.html">Page 1</a>
+      <span> | </span>
+      <a href="/html-midterm/page2.html">Page 2</a>
+      <span> | </span>
+      <a href="/html-midterm/page3.html">Page 3</a>
+      <span> | </span>
+      <a href="/html-midterm/page4.html">Page 4</a>
+      <span> | </span>
+      <a href="/html-midterm/page5.html">Page 5</a>
+      <span> | </span>
     </div>
     <h1>Errors</h1>
     <h2>Page 1</h2>
-    <hr>
+    <hr />
     <ul>
-        <li>Rearranged h2 and h3 on this page to put them in order.</li>
-        <li>Added a closing < em > bracket to the word creme fraiche.</li>
+      <li>Added boilerplate code to the beginning and end of the document.</li>
+      <li>Rearranged h2 and h3 on this page to put them in order.</li>
+      <li>Added a closing &lt;em> bracket to the word creme fraiche.</li>
     </ul>
     <h2>Page 2</h2>
-    <hr>
+    <hr />
     <ul>
-        <li>The opening < b > is never closed. I added < /b > after the word Inn.</li>
-        <li>Added a link for bay.</li>
+      <li>Added a link for the segmental arch on wikipedia.</li>
+      <li>
+        Rearranged tags on the Interior heading to resolve a w3c validator
+        issue.
+      </li>
+      <li>
+        The opening &lt;b> is never closed. I added &lt;/b> after the word Inn.
+      </li>
+      <li>Added a link for bay.</li>
     </ul>
     <h2>Page 3</h2>
-    <hr>
+    <hr />
     <ul>
-        <li>Added a closing < tb > after Lily in the table, then moved it to the next row.</li>
-        <li>Changed < Zapata > to < td > instead of < th >.</li>
-        <li>Moved the 22 from adrienne's row to olatunkbo's row.</li>
-        <li>Moved axelia's name to her correct row.</li>
+      <li>
+        Added a closing &lt;tb> after Lily in the table, then moved it to the
+        next row.
+      </li>
+      <li>Changed &lt;Zapata> to &lt;td> instead of &lt;th>.</li>
+      <li>Moved the 22 from adrienne's row to olatunkbo's row.</li>
+      <li>Moved axelia's name to her correct row.</li>
+      <li>Changed one li element, which was written as &lt;l>, to &lt;li></li>
     </ul>
     <h2>Page 4</h2>
-    <hr>
+    <hr />
     <ul>
-        <li>Redid all of the formatting for the table. It misunderstood how rows and columns work.</li>
-        <li>There were multiple issues with < tr > and < td >. I also changed the table headers to actually be table headers to increase accessibility.</li>
+      <li>
+        Redid all of the formatting for the table. It misunderstood how rows and
+        columns work.
+      </li>
+      <li>
+        There were multiple issues with &lt;tr> and &lt;td>. I also changed the
+        table headers to actually be table headers to increase accessibility.
+      </li>
+      <li>Added boilerplate to the beginning and end.</li>
+      <li>Added alt text to the images to increase accessibility.</li>
     </ul>
-
-</body>
+  </body>
 </html>
