--- a/html-midterm/page1.html
+++ b/html-midterm/page1.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
         body{
             text-align: center;
@@ -9,7 +11,7 @@
         }
     </style>
     <title>
-        Week 3 Assignment
+        Page 1
     </title>
 </head>
 <body>
