--- a/html-midterm/page5.html
+++ b/html-midterm/page5.html
@@ -29,7 +29,8 @@
     <h2>Page 1</h2>
     <hr>
     <ul>
-      <li>Added boilerplate code to the beginning and end of the document.</li>
+      <li>Added boilerplate code to the beginning and end of the document. This included adding a character set and a more descriptive page title, as well as a viewport and content size.</li>
+
       <li>Rearranged h2 and h3 on this page to put them in order.</li>
       <li>Added a closing &lt;em> bracket to the word creme fraiche.</li>
     </ul>
