--- a/html-midterm/page5.html
+++ b/html-midterm/page5.html
@@ -54,6 +54,8 @@
         Added a closing &lt;tb> after Lily in the table, then moved it to the
         next row.
       </li>
+      <li> Added     &lt;meta http-equiv="X-UA-Compatible" content="IE=edge"> to the boilerplate at the top.
+      </li>
       <li>Changed &lt;Zapata> to &lt;td> instead of &lt;th>.</li>
       <li>Moved the 22 from adrienne's row to olatunkbo's row.</li>
       <li>Moved axelia's name to her correct row.</li>
