Page 1 and 2 done

--- a/html-midter/page5.html
+++ b/html-midter/page5.html
@@ -1,11 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-</head>
-<body>
-    
-</body>
+  </head>
+  <body>
+    <h1>Errors</h1>
+    <h2>Page 1</h2>
+    <hr>
+    <ul>
+      <li>Closed the li tag on line 22.</li>
+      <li>Closed the tr tag on line 40.</li>
+      <li>Closed the table tag on line 41.</li>
+      <li>
+        Added the charset, the http-equiv, the content, and the name tags to the
+        head.
+      </li>
+      <li>Made the language english.</li>
+    </ul>
+    <h2>Page 2</h2>
+    <hr>
+    <ul>
+      <li>Closed the b tag on line 25.</li>
+      <li>Rearranged b and h2 on line 51.</li>
+      <li>Closed the h6 tag on line 72.</li>
+      <li>
+        Changed all of the headers with various different numbers to h2 (other
+        than the New Bradford Inn heading). All of those headers are of the same
+        significance in the article, so it makes sense for them to have the same
+        heading type.
+      </li>
+      <li>Added a hr tag after line 51 and line 101 to make the page more cohesive.</li>
+      <li>Added a link to line 56.</li>
+    </ul>
+    <h2>Page 3</h2>
+    <hr>
+    <ul>
+        <li></li>
+    </ul>
+  </body>
 </html>
