--- a/html-midter/page1.html
+++ b/html-midter/page1.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang = "en">
 <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mid-term Page 1</title>
 </head>
 <body>
@@ -37,7 +40,8 @@
             <td>Cell 4</td>
             <td>Cell 5</td>
             <td>Cell 6</td>
-   
+        </tr>
+    </table>
     <h2>Thank you for finding all the errors!</h2>
 </body>
 </html>
