--- a/html-midterm/page5.html
+++ b/html-midterm/page5.html
@@ -3,16 +3,30 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Mid-term Page 5</title>
   </head>
   <body>
+  <div class="navbar">
+    <a href="/html-midterm/page1.html">Page 1</a>
+    <span> | </span>
+    <a href="/html-midterm/page2.html">Page 2</a>
+    <span> | </span>
+    <a href="/html-midterm/page3.html">Page 3</a>
+    <span> | </span>
+    <a href="/html-midterm/page4.html">Page 4</a>
+    <span> | </span>
+    <a href="/html-midterm/page5.html">Page 5</a>
+    <span> | </span>
+  </div>
     <h1>Errors</h1>
     <h2>Page 1</h2>
     <hr>
     <ul>
       <li>Closed the li tag on line 22.</li>
+      <li>Closed the td tag on line 37.</li>
       <li>Closed the tr tag on line 40.</li>
       <li>Closed the table tag on line 41.</li>
+      <li>Closed the p tag on line 31.</li>
       <li>
         Added the charset, the http-equiv, the content, and the name tags to the
         head.
@@ -37,7 +51,19 @@
     <h2>Page 3</h2>
     <hr>
     <ul>
-        <li></li>
+      <li>Added style = "position: relative" to the footer to make it stay at the bottom of the page.</li>
+      <li>Added DOCTYPE html to the top of the page.</li>
+      <li>Added lang = en to the html tag.</li>
+    </ul>
+    <h2>Page 4</h2>
+    <hr>
+    <ul>
+      <li>Added DOCTYPE html to the top of the page.</li>
+      <li>Closed the td tag on line 38.</li>
+      <li>Opened and closed the td tag on line 43</li>
+      <li>Opened the td tag on line 48.</li>
+      <li>Rearranged the table to make all the photos line up with what would be expected from the headers.</li>
+      <li>Added alt text to all of the images.</li>
     </ul>
   </body>
 </html>
