--- a/js_Midterm/main.html
+++ b/js_Midterm/main.html
@@ -8,7 +8,11 @@
   </head>
 
   <body>
-    <h2 id = "phonenumber"> Enter your Phone Number</h2>
+    <div id="pregame-overlay">
+      <p>Are you ready to enter your phone number?</p>
+      <button id="start-game-button">I guess</button>
+  </div>
+    <h2 id = "phonenumber"> Enter your Phone Number:</h2>
     <canvas></canvas>
 
 
