--- a/leeleedirts/index.html
+++ b/leeleedirts/index.html
@@ -18,16 +18,16 @@
     <div class="container-fluid">
         <div class="row">
             <!-- Left Sidebar/Navbar -->
-            <nav class="col-md-2 d-none d-md-block bg-light sidebar" style="height: 100vh; position: fixed;">
+            <nav class="col-2 d-none d-md-block bg-light sidebar h-100" style=" position: fixed;">
                 <div class="sidebar-sticky">
                     <ul class="nav flex-column">
                         <li class="nav-item">
-                            <a id="name" style="font-size: 50px; color: black;">
+                            <a id="name" style="font-size: 5rem; color: black;">
                                 Aaliyah Gamble
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a id="sculpture" style="font-size: 20px; color: black;">
+                            <a id="sculpture" style="font-size: 2rem; color: black;">
                                 Austin-Based
                             </a>
                         </li>
@@ -52,12 +52,11 @@
 
             <!-- Main content area -->
             <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4" style="height: 2000vh;">
-                <h2>Main Content</h2>
                 <div class="image-flexbox">
                     <!-- Placeholder images (replace with your actual image URLs) -->
-                    <img src="image1.jpg" alt="Image 1">
-                    <img src="image2.jpg" alt="Image 2">
-                    <img src="image3.jpg" alt="Image 3">
+                    <img src="/leeleedirts/img/image1.png" alt="Image 1">
+                    <img src="image1.png" alt="Image 2">
+                    <img src="/leeleedirts/img/image1.png" alt="Image 3">
                     <!-- Add more images as needed -->
                 </div>
             </main>
