Can now show to Aaliyah

--- a/leeleedirts/index.html
+++ b/leeleedirts/index.html
@@ -22,13 +22,13 @@
                 <div class="sidebar-sticky">
                     <ul class="nav flex-column">
                         <li class="nav-item">
-                            <a id="name" style="font-size: 5rem; color: black;">
+                            <a id="name" style="font-size: 5rem; font-weight: bold; color: black;">
                                 Aaliyah Gamble
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a id="sculpture" style="font-size: 2rem; color: black;">
-                                Austin-Based
+                            <a id="location" style="font-size: 2rem; color: black;">
+                                Austin-Based Sculptor
                             </a>
                         </li>
                         <li class="nav-item">
@@ -36,8 +36,13 @@
                         </li>
                         
                         <li class="nav-item">
-                            <a class="nav-link" href="#">
-                                Contact Me
+                            <a class="nav-link active" href="#" style="font-size:2rem; color: black; font-weight: bold; background-color: #f8f9fa;">
+                                About
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" href="#" style="font-size:2rem; color: black; font-weight: bold; background-color: #f8f9fa;">
+                                Contact
                             </a>
                         </li>
                         <!-- Add more sidebar items as needed -->
@@ -51,7 +56,7 @@
     
 
             <!-- Main content area -->
-            <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4" style="height: 2000vh;">
+            <main role="main" class="col-md-10 ml-sm-auto col-lg-10 px-4" style="height: 2000vh;">
                 <div class="image-flexbox">
                     <!-- Placeholder images (replace with your actual image URLs) -->
                     <img src="/leeleedirts/img/image1.png" alt="Image 1">
